Fix z-index issue in Safari

--- a/src/main/resources/styles/mahjong-points.css
+++ b/src/main/resources/styles/mahjong-points.css
@@ -52,6 +52,7 @@ h1 {
   height: 7.1em;
   cursor: pointer;
   transition: transform 0.5s ease-in-out;
+  z-index: 500;
 }
 
 .mr-alert {
